# catpane

./: .env.example  .gitignore  Cargo.toml  README.md  entities.json  justfile  mempalace.yaml  smithery.yaml
.agents/skills/catpane-ios-console/: SKILL.md
.agents/skills/catpane-ios-console/tools/: capture.md  get-logs.md  list-devices.md  status.md
.agents/skills/catpane-logcat/: SKILL.md
.agents/skills/catpane-logcat/tools/: capture.md  get-logs.md  list-devices.md  status.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
android/catpane-helper-app/: build.gradle.kts  settings.gradle.kts
android/catpane-helper-app/app/: build.gradle.kts  proguard-rules.pro
android/catpane-helper-app/app/src/main/: AndroidManifest.xml
android/catpane-helper-app/app/src/main/java/dev/catpane/helper/: ControlProtocol.kt  MainActivity.kt  Shaper.kt  (+1 more)
android/catpane-helper-app/app/src/main/res/layout/: activity_main.xml
android/catpane-helper-app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/catpane-helper-app/app/src/main/res/values/: strings.xml  themes.xml
catpane-cli/: Cargo.toml
catpane-cli/src/: main.rs
catpane-core/: Cargo.toml
catpane-core/src/: adb.rs  capture.rs  crash_detector.rs  filter.rs  ios.rs  ios_device.rs  ios_noise.rs  lib.rs  log_buffer_config.rs  log_entry.rs  network_condition.rs  throttle_android.rs
catpane-mcp/: Cargo.toml
catpane-mcp/src/: lib.rs  log_buffer.rs  main.rs  protocol.rs  server.rs  tools.rs  watch.rs
catpane-ui/: Cargo.toml
catpane-ui/src/: app.rs  lib.rs  pane.rs
catpane-ui/src/ui/: dialogs.rs  log_area.rs  mod.rs  search.rs  sidebar.rs  theme.rs  toolbar.rs
native/macos/: project.yml
native/macos/Sources/Controller/: main.swift
native/macos/Sources/Extension/: CatPaneThrottlingProvider.swift
native/macos/Support/: CatPaneThrottlingExtension-Info.plist
packaging/homebrew/: catpane.template.rb
scripts/: build-helper-apk.sh  ensure-xcodegen.sh  package-macos-app.sh  package-release.sh  publish-homebrew-tap.sh  render-homebrew-cask.sh
spikes/gpui-poc/: Cargo.toml  README.md
spikes/gpui-poc/src/: main.rs
src/: adb.rs  app.rs  capture.rs  command.rs  filter.rs  ios.rs  log_buffer_config.rs  log_entry.rs  main.rs  pane.rs
src/mcp/: log_buffer.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/ui/: dialogs.rs  log_area.rs  mod.rs  search.rs  theme.rs  toolbar.rs
(+1 files in other folders)
