[package]
name = "catpane-cli"
version = "0.5.2"
edition = "2024"
default-run = "catpane"

[[bin]]
name = "catpane"
path = "src/main.rs"

[dependencies]
catpane-core = { path = "../catpane-core" }
catpane-mcp = { path = "../catpane-mcp" }
catpane-ui = { path = "../catpane-ui" }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.31"
egui = "0.31"
muda = "0.17"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = ["NSView", "NSWindow"] }
raw-window-handle = "0.6"
