[package]
name = "catpane-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
egui = ["dep:egui", "dep:qrcode"]

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.12"
egui = { version = "0.31", optional = true }
qrcode = { version = "0.14", optional = true }
