[package]
name = "catpane-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
egui = ["dep:egui", "dep:qrcode"]

[dependencies]
async-trait = "0.1"
egui = { version = "0.31", optional = true }
mdns-sd = "0.12"
qrcode = { version = "0.14", optional = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
