[package]
name = "catpane-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
catpane-core = { path = "../catpane-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[[bin]]
name = "catpane-mcp"
path = "src/main.rs"

[lib]
name = "catpane_mcp"
path = "src/lib.rs"
